tests/golden/runtime/keyed_reads_all_fields.kso
type user
  admin: bool
  name: string

fn main
  { admin name } = user false "clay"
  print "{name} {admin}"
